# swapi-spending

./: README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py
api/swapi/: base.py  swapi_client.py
ui/: Dockerfile  package-lock.json  package.json
ui/src/: App.css  App.js  App.test.js  index.css  utils.js
ui/src/components/: ContextModal.js  Spending.js
ui/src/hooks/: useFetchSpending.js
