[tool.poetry]
name = "swapi-spending"
version = "0.1.0"
description = ""
authors = ["nicolequindara <cquindara@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
